--- a/MyBrew/Base.lproj/Main.storyboard
+++ b/MyBrew/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4pJ-Az-fqb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RDb-0j-ayA">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -23,74 +23,72 @@
             </objects>
             <point key="canvasLocation" x="-260" y="711"/>
         </scene>
-        <!--Main Tab Bar Controller-->
-        <scene sceneID="JQd-y2-cmk">
+        <!--Main Page View Controller-->
+        <scene sceneID="oeO-gb-SFS">
             <objects>
-                <tabBarController id="QxO-8V-Wt6" userLabel="Main Tab Bar Controller" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="kr8-P0-PXh">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="nzk-f2-4O6" kind="relationship" relationship="viewControllers" id="UEg-22-kM0"/>
-                        <segue destination="kBT-tB-CfR" kind="relationship" relationship="viewControllers" id="c9K-JL-Ay6"/>
-                        <segue destination="5iH-Fe-AnG" kind="relationship" relationship="viewControllers" id="tNK-vS-Rxy"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vvP-lD-crJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" title="Main Page View Controller" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="RDb-0j-ayA" customClass="MainPageViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i3g-Cy-2bi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="616" y="731"/>
+            <point key="canvasLocation" x="794" y="870"/>
         </scene>
-        <!--My Beer View Nav-->
-        <scene sceneID="KiV-XW-G0q">
+        <!--My Beer Navigation Controller-->
+        <scene sceneID="iTi-Vc-a05">
             <objects>
-                <navigationController id="nzk-f2-4O6" userLabel="My Beer View Nav" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My Beers" id="DHf-bL-5uj"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rQ0-xv-xOu">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MZU-nv-w9o" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1342" y="179"/>
-        </scene>
-        <!--Recommend View Nav-->
-        <scene sceneID="KwR-qR-ncE">
-            <objects>
-                <navigationController id="kBT-tB-CfR" userLabel="Recommend View Nav" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Recommend" id="sjf-Os-4i7" userLabel="Recommend"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UaL-oZ-pir">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gd4-7K-hhd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1396" y="861"/>
-        </scene>
-        <!--Discover View Nav-->
-        <scene sceneID="heN-28-3GK">
-            <objects>
-                <navigationController id="5iH-Fe-AnG" userLabel="Discover View Nav" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Discover" id="Kca-rw-8tp" userLabel="Discover"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="E1T-y3-xR8">
+                <navigationController title="My Beer Navigation Controller" id="zuU-6a-NnO" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WnY-wH-Z03">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="kZM-tr-eka" kind="relationship" relationship="rootViewController" id="Auw-fx-tuo"/>
+                        <segue destination="0n1-QN-yJL" kind="relationship" relationship="rootViewController" id="3Rs-hV-rPj"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0yN-Xc-xAB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q52-dn-Fze" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1360" y="1686"/>
+            <point key="canvasLocation" x="258" y="1951"/>
+        </scene>
+        <!--My Beer View Controller-->
+        <scene sceneID="Njo-vq-JwY">
+            <objects>
+                <viewController storyboardIdentifier="MyBeerViewController" title="My Beer View Controller" id="0n1-QN-yJL" customClass="MyBeerViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="maT-eS-lCD"/>
+                        <viewControllerLayoutGuide type="bottom" id="OKD-th-jZP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mtt-1N-mQJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gfX-UX-Y2q"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BLn-tN-Ghg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1060" y="1982"/>
+        </scene>
+        <!--Recommend View Controller-->
+        <scene sceneID="NGb-1z-0h0">
+            <objects>
+                <viewController storyboardIdentifier="RecommendViewController" title="Recommend View Controller" id="eRF-fF-Kvx" customClass="RecommendViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LU8-8g-S5N"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y1w-0y-cb6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TBQ-bc-58C">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="dgD-Nx-NFg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eCt-jN-vFK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2220" y="2106"/>
         </scene>
         <!--Discover View Controller-->
         <scene sceneID="sCJ-Mj-s2X">
             <objects>
-                <viewController id="kZM-tr-eka" userLabel="Discover View Controller" customClass="DiscoverViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DiscoverViewController" title="Discover View Controller" id="kZM-tr-eka" userLabel="Discover View Controller" customClass="DiscoverViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YQs-xS-7Cp"/>
                         <viewControllerLayoutGuide type="bottom" id="6uc-6U-8WP"/>
@@ -104,7 +102,39 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e4j-oR-MFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2230" y="1686"/>
+            <point key="canvasLocation" x="1706" y="946"/>
+        </scene>
+        <!--Recommend Navigation Controller-->
+        <scene sceneID="KjE-fB-ogP">
+            <objects>
+                <navigationController title="Recommend Navigation Controller" id="iXS-au-weS" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y8j-7C-lXV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eRF-fF-Kvx" kind="relationship" relationship="rootViewController" id="ugd-Ca-hGx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0FE-lW-roX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2472" y="1189"/>
+        </scene>
+        <!--Discover Navigation Controller-->
+        <scene sceneID="IXf-aR-FxL">
+            <objects>
+                <navigationController title="Discover Navigation Controller" id="lug-1F-QYH" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8x4-UA-yjv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kZM-tr-eka" kind="relationship" relationship="rootViewController" id="0Fd-Kj-Ewi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WTv-Dg-f2P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1638" y="47"/>
         </scene>
     </scenes>
 </document>
