--- a/MyBrew/Base.lproj/Main.storyboard
+++ b/MyBrew/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -53,66 +52,47 @@
         <scene sceneID="KA0-r0-V8j">
             <objects>
                 <tableViewController storyboardIdentifier="MyBeerTableViewController" title="My Beer Table View Controller" id="0P9-z0-Jr8" customClass="MyBeerTableViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="509" sectionHeaderHeight="28" sectionFooterHeight="28" id="bqE-eF-Prc">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="508" sectionHeaderHeight="28" sectionFooterHeight="28" id="bqE-eF-Prc">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FoldingCell" rowHeight="509" id="oyD-a3-pNi" customClass="MyBeerCell" customModule="MyBrew" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="509"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FoldingCell" rowHeight="508" id="oyD-a3-pNi" customClass="MyBeerCell" customModule="MyBrew" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="508"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oyD-a3-pNi" id="FkM-h9-6fz">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="508.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="508"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-bb-xWQ" customClass="RotatedView" customModule="MyBrew" customModuleProvider="target">
-                                            <rect key="frame" x="28" y="1" width="544" height="165"/>
+                                            <rect key="frame" x="28" y="18" width="544" height="80"/>
                                             <color key="backgroundColor" red="0.20275660400000001" green="1" blue="0.97268543620000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="165" id="iSf-PP-0aO"/>
+                                                <constraint firstAttribute="height" constant="80" id="XFi-n4-QWX"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRa-6r-0QK">
-                                            <rect key="frame" x="28" y="188" width="544" height="200"/>
+                                            <rect key="frame" x="28" y="116" width="544" height="200"/>
                                             <color key="backgroundColor" red="0.52549019610000003" green="0.4549019608" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="400" id="UAT-A8-YqE"/>
-                                                <constraint firstAttribute="height" constant="200" id="kdJ-jN-CTV"/>
-                                                <constraint firstAttribute="height" constant="479" id="z6H-3z-cYf"/>
+                                                <constraint firstAttribute="height" constant="200" id="XoM-Jv-gfm"/>
                                             </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="UAT-A8-YqE"/>
-                                                    <exclude reference="z6H-3z-cYf"/>
-                                                </mask>
-                                            </variation>
                                         </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="height" secondItem="zH8-bb-xWQ" secondAttribute="height" multiplier="2" id="7Bz-Zk-tVc"/>
-                                        <constraint firstAttribute="topMargin" secondItem="zH8-bb-xWQ" secondAttribute="top" constant="7" identifier="ForegroundViewTop" id="G6V-LP-BQJ"/>
-                                        <constraint firstItem="zH8-bb-xWQ" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="HAt-91-ZS4"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="zH8-bb-xWQ" secondAttribute="trailing" constant="20" id="JrD-yY-R40"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="DRa-6r-0QK" secondAttribute="trailing" constant="20" id="OQ7-EV-DbF"/>
-                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="180" identifier="ContainerViewTop" id="UUU-NL-AvC"/>
-                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="ZM3-VE-dWS"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="zH8-bb-xWQ" secondAttribute="bottom" constant="417.5" id="hc2-dc-wdw"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="zH8-bb-xWQ" secondAttribute="trailing" constant="20" id="qsO-15-etG"/>
-                                        <constraint firstAttribute="leadingMargin" secondItem="zH8-bb-xWQ" secondAttribute="leading" constant="20" id="sMX-ja-47U"/>
-                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="wW4-nF-qau"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="DRa-6r-0QK" secondAttribute="trailing" constant="20" id="zoe-4U-Gm6"/>
+                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="108" identifier="ContainerViewTop" id="2lP-vY-Hm1"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="DRa-6r-0QK" secondAttribute="trailing" constant="20" id="5oP-s4-rD8"/>
+                                        <constraint firstItem="zH8-bb-xWQ" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="10" identifier="ForegroundViewTop" id="Blx-ls-Xzz"/>
+                                        <constraint firstItem="zH8-bb-xWQ" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="CDd-sf-PeB"/>
+                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="KOj-Ds-RFQ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="zH8-bb-xWQ" secondAttribute="trailing" constant="20" id="ycI-PZ-XxN"/>
                                     </constraints>
-                                    <variation key="default">
-                                        <mask key="constraints">
-                                            <exclude reference="JrD-yY-R40"/>
-                                            <exclude reference="hc2-dc-wdw"/>
-                                            <exclude reference="sMX-ja-47U"/>
-                                            <exclude reference="7Bz-Zk-tVc"/>
-                                            <exclude reference="OQ7-EV-DbF"/>
-                                            <exclude reference="ZM3-VE-dWS"/>
-                                        </mask>
-                                    </variation>
                                 </tableViewCellContentView>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="itemCount">
+                                        <integer key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="containerView" destination="DRa-6r-0QK" id="GyM-Ls-O8R"/>
                                     <outlet property="foregroundView" destination="zH8-bb-xWQ" id="7KJ-4Z-lFI"/>
@@ -125,6 +105,8 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="My Beers" id="sog-A4-OMw"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="600"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="maW-Du-Td1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
