--- a/MyBrew/Base.lproj/Main.storyboard
+++ b/MyBrew/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
         <!--My Beer Navigation Controller-->
         <scene sceneID="iTi-Vc-a05">
             <objects>
-                <navigationController storyboardIdentifier="MyBeerNavController" title="My Beer Navigation Controller" id="zuU-6a-NnO" customClass="MyBeerNavigationControllerViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MyBeerNavController" title="My Beer Navigation Controller" id="zuU-6a-NnO" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WnY-wH-Z03">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -65,24 +65,24 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-bb-xWQ" customClass="RotatedView" customModule="MyBrew" customModuleProvider="target">
-                                            <rect key="frame" x="28" y="18" width="544" height="80"/>
+                                            <rect key="frame" x="28" y="15" width="544" height="165"/>
                                             <color key="backgroundColor" red="0.20275660400000001" green="1" blue="0.97268543620000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="80" id="XFi-n4-QWX"/>
+                                                <constraint firstAttribute="height" constant="165" id="XFi-n4-QWX"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRa-6r-0QK">
-                                            <rect key="frame" x="28" y="116" width="544" height="200"/>
+                                            <rect key="frame" x="28" y="188" width="544" height="310"/>
                                             <color key="backgroundColor" red="0.52549019610000003" green="0.4549019608" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="200" id="XoM-Jv-gfm"/>
+                                                <constraint firstAttribute="height" constant="310" id="XoM-Jv-gfm"/>
                                             </constraints>
                                         </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="108" identifier="ContainerViewTop" id="2lP-vY-Hm1"/>
+                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="180" identifier="ContainerViewTop" id="2lP-vY-Hm1"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="DRa-6r-0QK" secondAttribute="trailing" constant="20" id="5oP-s4-rD8"/>
-                                        <constraint firstItem="zH8-bb-xWQ" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="10" identifier="ForegroundViewTop" id="Blx-ls-Xzz"/>
+                                        <constraint firstItem="zH8-bb-xWQ" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="7" identifier="ForegroundViewTop" id="Blx-ls-Xzz"/>
                                         <constraint firstItem="zH8-bb-xWQ" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="CDd-sf-PeB"/>
                                         <constraint firstItem="DRa-6r-0QK" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="KOj-Ds-RFQ"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="zH8-bb-xWQ" secondAttribute="trailing" constant="20" id="ycI-PZ-XxN"/>
@@ -104,13 +104,19 @@
                             <outlet property="delegate" destination="0P9-z0-Jr8" id="auP-5Y-dTW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Beers" id="sog-A4-OMw"/>
+                    <navigationItem key="navigationItem" title="My Beers" id="sog-A4-OMw">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6fa-1s-Wid">
+                            <connections>
+                                <action selector="addBeerButton:" destination="0P9-z0-Jr8" id="Ke6-Xd-vOW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="600"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="maW-Du-Td1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1020" y="1945"/>
+            <point key="canvasLocation" x="1186" y="1951"/>
         </scene>
         <!--Recommend View Controller-->
         <scene sceneID="NGb-1z-0h0">
@@ -163,7 +169,7 @@
         <!--Recommend Navigation Controller-->
         <scene sceneID="KjE-fB-ogP">
             <objects>
-                <navigationController title="Recommend Navigation Controller" id="iXS-au-weS" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="RecommendNavController" title="Recommend Navigation Controller" id="iXS-au-weS" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y8j-7C-lXV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
